@@ -1,3 +1,9 @@
+2011-05-19  Yukihiro Nakadaira
+
+	* win_iconv.c: Add some more UCS aliases.
+	Merge from Tor Lillqvist version.
+	(Issue 4) (Thanks to mkbosmans)
+
 2011-05-15  Yukihiro Nakadaira
 
 	* Makefile: use variable for tools in Makefile
